infrastructure/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: repl-frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: repl-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repl-frontend
spec:
  selector:
    matchLabels:
      app: repl-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: repl-frontend
    spec:
      containers:
        - name: repl-frontend
          image: mtrqq/repl-frontend:0.0.5
          ports:
            - containerPort: 3000
