infrastructure/rlimiter.yaml
apiVersion: v1
kind: Service
metadata:
  name: rlimiter-redis-kv
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: rlimiter-redis-kv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rlimiter-redis-kv
spec:
  selector:
    matchLabels:
      app: rlimiter-redis-kv
  replicas: 1
  template:
    metadata:
      labels:
        app: rlimiter-redis-kv
    spec:
      containers:
        - name: rlimiter-redis-kv
          image: redis:6.2.6
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: rlimiter
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: rlimiter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rlimiter
spec:
  selector:
    matchLabels:
      app: rlimiter
  replicas: 1
  template:
    metadata:
      labels:
        app: rlimiter
    spec:
      containers:
        - name: rlimiter
          image: mtrqq/rlimiter:0.1.0
          ports:
            - containerPort: 80
